* Fixing alias used in ORDER BY (RT#61384, thanks jvm)
* Fixing ORDER BY behavior for multiple sort columns
  (slower, but guaranteed correct)

[Improvements]
* renamed fetch-method into fetch_row (keep fetch() as alias) and
  add a fetch_rows() to fetch all rows at once
* Different accessors for direction of ORDER BY clause query part
  and it's boolean equivalent "desc" (0 or 1, respectively)

[Misc]
* Bump requirement of DBI to 1.616
* Add a lot of Pure-Perl DBD's as build dependency for testing
* switch for fully external DBD tests from DBD::XBase to DBD::SQLite

Version 1.31, released August 16th, 2010
----------------------------------------------

[Bug fixes]
* Fix misbehaviour of DELETE/UPDATE for tables with only basic capabilities
  and no matching where clause (reported by H.Merijn Brand and Drew ...)
* Fix some column identifier splits to respect quoted tables

[Improvements]
* Optimized some core routines between 25% and 50%.

Version 1.30, released August 1st, 2010
----------------------------------------------

[Bug fixes]
* remove blib directory from distfile

Version 1.29, released August 1st, 2010
----------------------------------------------

[Bug fixes]
* add some getters as documented in SQL::Statement::Structure
  (fixes RT#59834, thanks John Wiersba)
* add missing import of function croak to SQL::Statement::Term::ColumnValue
* fix assignment of parser result (doesn't run with perl-5.13.3)

Version 1.28, released July 15th, 2010
----------------------------------------------

[Improvements]
* Introduce new "capability" method for SQL::Statement and SQL::Eval::Table
  + Add capability for "insert_new_row" to allow DBD::DBM to fix PK
    constrain on INSERT statements.
* Performance of IMPORT feature improved (thanks to Sven Probst, RT#57322)

[Bug fixes]
* expect every table object being derived from SQL::Eval::Table
* rewrite DELETE and UPDATE command based on table capabilities